styles.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant&display=swap');
body,
html {
    height: 100%;
    font-family: 'Cormorant', serif;
    font-size: 18px;
    font-weight: lighter;
    text-align: center;
    line-height: 1.25;
    color: black;
    background-color: #D1F1FF;
    margin: 0;
    /* This removes any default margin around the <body> */
    padding: 0;
    /* This removes any default padding around the <body> */
}

h1 {
    font-weight: normal;
    margin-bottom: 0;
    /* Removes space below the h1 tag */
}

h2 {
    font-weight: lighter;
    font-size: 20px;
    margin-top: 0;
    /* Removes space above the h2 tag */
    margin-bottom: 0;
    /* Adjust this as needed, or set to 0 if you want no space */
}

p {
    /* Adds space above the first paragraph. Adjust the value as needed. */
    /* If you only want to target the first paragraph, you can use the :first-of-type pseudo-class */
    margin-top: 20px;
    font-weight: lighter;
}

p:first-of-type {
    margin-top: 20px;
    /* Adds space only above the first paragraph */
}


/* body,
html {
    h1 {
        font-weight: lighter;
    }
    h2 {
        font-weight: lighter;
    }
    height: 100%;
    font-family: 'Source Serif 4',
    'Source Serif Pro',
    serif;
    font-size: 18px;
    font-weight: lighter;
    text-align: center;
    line-height: 1.25;
    color: black;
    background-color: #D1F1FF
} */

